Cambio de nombre

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">
-                        Clarence
-                        <span class="text-primary">Taylor</span>
+                        Carlos
+                        <span class="text-primary">Romero Ganfornina</span>
                     </h1>
                     <div class="subheading mb-5">
                         CHile 3 · Lebrija, Sevilla 41740 · +34 634 32 30 79 ·
