--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-                    <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+                    <p>Además de ser desarrollador web, disfruto la mayor parte de mi tiempo al aire libre y leer libros.</p>
+                    <p class="mb-0">Cuando me veo obligado a quedarme en casa, veo varias películas y series de ciencia ficción y fantasía, tambien me dedico a ver los últimos avances tecnológicos en el mundo del desarrollo web</p>
                 </div>
             </section>
             <hr class="m-0" />
