Cambio en las redes sociales

--- a/index.html
+++ b/index.html
@@ -49,10 +49,8 @@
                     </div>
                     <p class="lead mb-5">Soy un programador recién graduado, apasionado por el desarrollo de software y el aprendizaje de nuevas tecnologías. Durante mi formación, he adquirido conocimientos en programación</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/in/carlos-romero-ganfornina-729a61342/"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://github.com/CarlosRomero65"><i class="fab fa-github"></i></a>
                     </div>
                 </div>
             </section>
