Añadir certificado de grado medio y superior

--- a/index.html
+++ b/index.html
@@ -147,6 +147,15 @@
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             Ultimate JavaScript:de cero a programador experto - Udemy
                         </li>
+			<li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            tecnico en sistemas microinformaticos y redes grado medio
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            Técnico Superior en Desarrollo de Aplicaciones Web
+                        </li>
+
                     </ul>
                 </div>
             </section>
